--- a/.github/workflows/build-x86-64-openwrt.yml
+++ b/.github/workflows/build-x86-64-openwrt.yml
@@ -8,7 +8,7 @@ on:
         required: true
         default: '24.10'
         type: choice
-        options: [24.10]
+        options: ['24.10']
 
       target:
         description: '选择要编译的机型'
