--- a/configs/x86-64-24.10.config
+++ b/configs/x86-64-24.10.config
@@ -18,6 +18,7 @@ CONFIG_TARGET_ROOTFS_TARGZ=y
 # CONFIG_VMDK_IMAGES is not set
 
 # Applications
+CONFIG_DEFAULT_open-vm-tools=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 # CONFIG_PACKAGE_luci-app-adguardhome=y
