--- a/.github/workflows/build-x86-64-openwrt.yml
+++ b/.github/workflows/build-x86-64-openwrt.yml
@@ -104,7 +104,7 @@ jobs:
         sudo swapoff -a && sudo rm -f /swapfile /mnt/swapfile
         sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
         (sudo -E apt-get -y update
-        sudo -E apt-get -y install clang $(curl -fsSL is.gd/depends_ubuntu_2204)
+        sudo -E apt-get -y install clang $(curl -fsSL is.gd/depends_ubuntu_2204) libfuse-dev
         sudo -E systemctl daemon-reload
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get -y clean) &
